--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@langchain/openai": "^0.6.7",
     "@nuxt/eslint": "1.7.1",
     "@nuxt/ui": "3.3.0",
+    "cheerio": "^1.1.2",
     "dompurify": "^3.2.6",
     "eslint": "^9.32.0",
     "faiss-node": "^0.5.1",
